--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "axios": "^1.1.3",
     "core-js": "^3.6.5",
     "jquery": "^3.6.1",
+    "laravel-vue-pagination": "^4.0.0",
+    "v-pagination-3": "^0.1.7",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue3-select2-component": "^0.1.7",
     "vuex": "^4.0.0-0",
     "vuex-persistedstate": "^4.1.0"
   },
